kube-deploy.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: ausleihen
  namespace: bibliothek
  labels:
    app: ausleihen
    role: frontend
    scs: ausleihen
spec:
  ports:
  - port: 8080
    name: web
  selector:
    app: ausleihen

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ausleihen
  namespace: bibliothek
  labels:
    app: ausleihen
    role: backend
    scs: ausleihen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ausleihen
  template:
    metadata:
      labels:
        app: ausleihen
    spec:
      containers:
      - name: varnish-ssi
        image: quay.io/containerbootcamp/alpine-varnish
      - name: ausleihen
        image: quay.io/containerbootcamp/ausleihen
        ports:
        - containerPort: 80
          protocol: TCP
      - name: jaeger-agent
        image: jaegertracing/jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        command:
        - "/go/bin/agent-linux"
        - "--collector.host-port=jaeger-collector.tracing:14267"
      volumes:
      - name: ausleihen-init-scripts-1
        configMap:
          name: ausleihen-pg-init-scripts-1
      - name: ausleihen-init-scripts-2
        configMap:
          name: ausleihen-pg-init-scripts-2

---

#####
# ingress to assets, test f.e. with
# curl http://bootcamp.ch.innoq.io/einbuchen/books
#####

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  name: ausleihen
  namespace: bibliothek
spec:
  rules:
  - host: bootcamp.ch.innoq.io
    http:
      paths:
      - path: /ausleihen
        backend:
          serviceName: ausleihen
          servicePort: 8080
